# flask-task-manager-api

./: .gitignore  pyproject.toml
app/: __init__.py  models.py  routes.py  services.py
app/routes/: member_routes.py  project_routes.py  task_routes.py  user_routes.py
app/schemas/: __init__.py
app/services/: project_service.py  task_service.py
