[project]
name = "flask-task-manager-api"
version = "0.1.0"
description = "Task manager API built with Flask"
authors = [
    { name = "prodsimu" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "bcrypt==5.0.0",
    "blinker==1.9.0",
    "click==8.3.1",
    "Flask==3.1.3",
    "Flask-SQLAlchemy==3.1.1",
    "flask-openapi3==4.1.0",
    "greenlet==3.3.2",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "pydantic==2.11.7",
    "SQLAlchemy==2.0.48",
    "typing_extensions==4.15.0",
    "Werkzeug==3.1.6",
    "PyJWT==2.12.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"